--- a/src/Client/Pages/Reader.razor.css
+++ b/src/Client/Pages/Reader.razor.css
@@ -1,4 +1,4 @@
-﻿.reader {
+.reader {
   position: relative;
   height: 100%;
   overflow: hidden;
@@ -19,11 +19,10 @@
   transition: transform 0.1s ease;
   box-sizing: border-box;
   width: 100%;
-  height: 100%;
-  column-count: 1;
-  column-gap: 1rem;
+  column-gap: 2rem;
   user-select: none;
   cursor: default;
+  bottom: 0;
 }
 
 .pager p {
@@ -31,10 +30,19 @@
   cursor: default;
 }
 
+.progress {
+  height: 2px;
+  background-color: var(--primary-color);
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
+
 .reader-hidden,
 .pager {
-  position: absolute;
-  padding: 8px 8px 16px 8px;
+  position: fixed;
+  padding: 1rem 1rem 2.5rem 1rem;
   top: 0;
   left: 0;
 }
