--- a/src/Client/Pages/Search.razor
+++ b/src/Client/Pages/Search.razor
@@ -57,7 +57,7 @@
                         <div>
                             @foreach (var tag in result.Tags)
                             {
-                                <span class="tag"><i class="las la-tag"></i> @tag.Label</span>
+                                <span class="tag"><i class="las la-tag"></i> @tag</span>
                             }
                         </div>
                     </div>
