--- a/src/Client/Pages/Reader.razor.css
+++ b/src/Client/Pages/Reader.razor.css
@@ -1,6 +1,8 @@
 ﻿.reader {
   position: relative;
-  height: 100%;
+  display: flex;
+  flex-direction: column;
+  flex: 1 1 auto;
 }
 
 .reader-hidden {
