--- a/src/Client/Pages/Reader.razor
+++ b/src/Client/Pages/Reader.razor
@@ -18,9 +18,6 @@
         {
             <p>@paragraph</p>
         }
-
-        <h2 class="end">The End</h2>
-        <h3>See more like this <i class="la la-angle-double-right"></i></h3>
     </div>
 
     <Loader Loading="loading" />
@@ -34,16 +31,18 @@
             {
                 <p>@paragraph</p>
             }
-
-            <h2 class="end">The End</h2>
-            <h3>See more like this <i class="la la-angle-double-right"></i></h3>
     </div>
 
-    <div class="progress-count"><small><b>Page @(page + 1) of @(pageCount)</b></small></div>
+    <div class="fade @(page == pageCount ? "shown" : "hidden")">
+        <h1 class="end">The End</h1>
+        <h3 class="see-more">See more like this <i class="la la-angle-double-right"></i></h3>
+    </div>
 
-    <div class="progress-percent"><small><b>@(Math.Ceiling(progress))%</b></small></div>
-
-    <div class="progress-bar" style="width: @(progress)%;"></div>
+    <div class="fade @(page == pageCount ? "hidden" : "shown")">
+        <div class="progress-count"><small><b>Page @(page + 1) of @(pageCount)</b></small></div>
+        <div class="progress-percent"><small><b>@(Math.Ceiling(progress))%</b></small></div>
+        <div class="progress-bar" style="width: @(progress)%;"></div>
+    </div>
 </main>
 
 @code {
@@ -289,13 +288,13 @@
 
     private void GoNext()
     {
-        if (page + 1 == pageCount) {
+        if (page == pageCount) {
             // Go to more like this page
             navManager.NavigateTo($"/more/{ContentId}");
             return;
         }
 
-        if (page + 1 < pageCount) 
+        if (page < pageCount) 
         {
             page++;
             StateHasChanged();
