--- a/src/Client/Pages/MoreLikeThis.razor.css
+++ b/src/Client/Pages/MoreLikeThis.razor.css
@@ -18,6 +18,45 @@
   padding: 10px;
 }
 
+.header-bottom,
+.header-top {
+  width: 100%;
+  display: flex;
+  align-items: baseline;
+  margin-bottom: 10px;
+}
+
+.header-top .nav-logo {
+  font-size: 24px;
+  margin: auto;
+}
+
+.header-bottom .nav-logo,
+.header-bottom .header-auth {
+  display: none;
+}
+
+.nav-link {
+  font-size: 18px;
+  color: #222;
+  text-decoration: none;
+  margin-right: 20px;
+}
+
+.nav-link:hover,
+.nav-link:focus {
+  color: var(--primary-color);
+  text-decoration: none;
+}
+
+.title-wrapper {
+  display: inline-block;
+}
+
+.title {
+  font-size: 38px;
+}
+
 .results {
   width: 100%;
 }
@@ -80,10 +119,26 @@
 }
 
 @media (min-width: 932px) {
-  .header,
   .main {
     padding-left: 160px;
     padding-right: 10px;
+  }
+
+  .header-top {
+    display: none;
+  }
+
+  .header-bottom {
+    display: flex;
+  }
+
+  .header-bottom .nav-logo,
+  .header-bottom .header-auth {
+    display: inline-block;
+  }
+
+  .header-bottom .header-auth {
+    margin-left: auto;
   }
 
   .results {
